fix: improvement on mobile view

--- a/src/components/Homepage/style.scss
+++ b/src/components/Homepage/style.scss
@@ -11,8 +11,7 @@
   &__welcome {
     background-color: #FCFBFE;
     border-radius: 0.3em;
-    position: absolute;
-    top: 20vw;
+    // position: relative;
     width: 90%;
     padding: 1em;
     text-align: center;
@@ -32,8 +31,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    top: -5em;
     width: 90%;
     background-color: #FCFBFE;
     border-radius: 0.2em;
@@ -68,7 +65,6 @@
     align-items: center;
   
     &__background {
-      // position: absolute;
       width: 100%;
     }
   
